# text-classifier

./: README.md  TestData.ipynb  pyproject.toml
